# doctorcli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/doctorcli/: __init__.py  __main__.py  agents.py  app.py  application.py  cli.py  constants.py  exceptions.py  provider_profiles.py  runtime.py  tool_profiles.py
src/doctorcli/domain/: models.py
src/doctorcli/providers/: base.py  claude_provider.py  gemini_provider.py  groq_provider.py  lmstudio_provider.py  ollama_provider.py  openai_compatible.py  openai_provider.py  registry.py
src/doctorcli/services/: chat_service.py  memory_service.py  scope_guard.py  session_service.py
src/doctorcli/storage/: filesystem.py  session_store.py  settings_store.py
src/doctorcli/tools/: base.py  registry.py  tavily_tool.py  wikipedia_tool.py
src/doctorcli/ui/: console.py  menus.py
