[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctorcli"
version = "1.0.0"
description = "Specialist-first medical AI CLI with persistent sessions, markdown streaming, optional tools, and multi-provider model support."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AIMLDev726" }]
maintainers = [{ name = "AIMLDev726" }]
keywords = ["ai", "cli", "doctor", "healthcare", "llm", "medical", "rich", "terminal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "platformdirs>=4.2.0,<5.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "rich>=13.7.0,<14.0.0",
    "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0,<2.0.0",
    "pytest>=8.2.0,<9.0.0",
    "twine>=6.0.0,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/AIMLDev726/doctorcli"
Repository = "https://github.com/AIMLDev726/doctorcli"
Issues = "https://github.com/AIMLDev726/doctorcli/issues"

[project.scripts]
doctorcli = "doctorcli.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


